# practical-ee-pcb-toolkit

./: LICENSE  README.md  pyproject.toml
docs/: adc_calculations.md  connector_calculations.md  filter_calculations.md  opamp_calculations.md  via_calculations.md
ee_pcb_toolkit/: __init__.py  __main__.py  adc.py  capacitors.py  cli.py  connectors.py  filters.py  input_helpers.py  opamps.py  pcb_rules.py  pcb_traces.py  power.py  resistors.py  signal_integrity.py  standard_values.py  thermal.py  units.py  vias.py
examples/: adc_bringup_example.py  basic_usage.py  connector_power_example.py  filter_design_example.py  opamp_front_end_example.py  pcb_rules_example.py  signal_integrity_example.py  standard_values_example.py  via_power_net_example.py
tests/: test_adc.py  test_capacitors.py  test_connectors.py  test_filters.py  test_input_helpers.py  test_opamps.py  test_pcb_traces.py  test_resistors.py  test_signal_integrity.py  test_standard_values.py  test_units.py  test_vias.py
